--- a/charts/matrix-stack/templates/postgresql/secret.yaml
+++ b/charts/matrix-stack/templates/postgresql/secret.yaml
@@ -7,20 +7,18 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with $.Values.postgresql -}}
 {{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
 apiVersion: v1
-kind: Service
+kind: Secret
 metadata:
   labels:
     {{- include "element-io.postgresql.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-postgresql
   namespace: {{ $.Release.Namespace }}
-spec:
-  ports:
-  - port: 5432
-    name: postgres
-  - port: 9187
-    name: metrics
-  type: ClusterIP
-  selector:
-    app.kubernetes.io/instance: {{ $.Release.Name }}-postgresql
+data:
+{{- with .adminPassword.value }}
+  ADMIN_PASSWORD: {{ . | b64enc }}
+{{- end }}
+{{- with .essPassword.value }}
+  ESS_PASSWORD: {{ .| b64enc }}
+{{- end }}
 {{- end -}}
 {{- end -}}
