--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -26,9 +26,10 @@ data:
 {{- with .macaroon.value }}
   MACAROON: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.postgres.password" "secretProperty" .postgres.password)) -}}
-{{- with .postgres.password.value }}
+{{- with .postgres.password }}
+{{- with .value }}
   POSTGRES_PASSWORD: {{ . | b64enc }}
+{{- end }}
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret "initIfAbsent" true)) -}}
 {{- with .registrationSharedSecret.value }}
