--- a/charts/matrix-stack/templates/postgresql/configmap.yaml
+++ b/charts/matrix-stack/templates/postgresql/configmap.yaml
@@ -5,18 +5,19 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
 {{- with $.Values.postgresql }}
-{{- if .enabled }}
+{{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
+    enabled: {{ (include "element-io.postgresql.enabled" (dict "root" $)) }}
     {{- include "element-io.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-postgresql-initdb
   namespace: {{ $.Release.Namespace }}
 data:
   init-dbs.sh: |
     #!/bin/sh
-{{- range $dbname := list "synapse" "mas "-}}
+{{- range $dbname := list "synapse" "mas" -}}
     (echo -n $POSTGRES_POSTGRES_PASSWORD | psql -W -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = '{{ $dbname }}'" | grep -q 1) || \
     (echo -n $POSTGRES_POSTGRES_PASSWORD | createdb --encoding=UTF8 --locale=C --template=template0 --owner=ess_user {{ $dbname }} -U postgres)
 {{- end -}}
