--- a/charts/matrix-stack/templates/postgresql/pvc.yaml
+++ b/charts/matrix-stack/templates/postgresql/pvc.yaml
@@ -4,8 +4,8 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
-{{- with .Values.postgresql -}}
-{{- if .enabled -}}
+{{- with $.Values.postgresql -}}
+{{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
 {{- if not .storage.existingClaim }}
 apiVersion: v1
 kind: PersistentVolumeClaim
