--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -162,8 +162,10 @@ We have an init container to render & merge the config for several reasons:
         - >
           [ -e "/usr/lib/`uname -m`-linux-gnu/libjemalloc.so.2" ] && export LD_PRELOAD="/usr/lib/`uname -m`-linux-gnu/libjemalloc.so.2";
           python3 -m {{ include "element-io.synapse.process.app" (dict "root" $ "context" $processType) }} -c /conf/homeserver.yaml
+{{- with (include "element-io.synapse.env" (dict "root" $ "context" .)) -}}
         env:
-          {{- include "element-io.synapse.env" (dict "root" $ "context" .) | nindent 10 }}
+          {{- . | nindent 10 }}
+{{- end }}
         ports:
 {{- if (include "element-io.synapse.process.hasHttp" (dict "root" $ "context" $processType)) }}
         - containerPort: 8008
