postgresq: dont generate the secret if not necessary

--- a/charts/matrix-stack/templates/postgresql/secret.yaml
+++ b/charts/matrix-stack/templates/postgresql/secret.yaml
@@ -6,6 +6,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with $.Values.postgresql -}}
 {{- if (include "element-io.postgresql.enabled" (dict "root" $)) }}
+{{- if or .adminPassword.value  .essPassword.value }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -20,5 +21,6 @@ data:
 {{- with .essPassword.value }}
   ESS_PASSWORD: {{ .| b64enc }}
 {{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
