manifests tests: verify postgresql with external / in values behaviour

--- a/charts/matrix-stack/ci/fragments/matrix-authentication-service-test-postgres-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-authentication-service-test-postgres-secrets-externally.yaml
@@ -4,6 +4,6 @@
 
 matrixAuthenticationService:
   postgres:
-    host: postgres
-    user: mas
-    database: mas
+    password:
+      secret: "{{ $.Release.Name }}-mas-external"
+      secretKey: postgresPassword
