--- a/charts/matrix-stack/ci/fragments/matrix-authentication-service-test-postgres-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/matrix-authentication-service-test-postgres-secrets-in-helm.yaml
@@ -4,6 +4,7 @@
 
 matrixAuthenticationService:
   postgres:
-    host: postgres
-    user: mas
-    database: mas
+    password:
+      value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+      secret: null
+      secretKey: null
