--- a/charts/matrix-stack/ci/fragments/synapse-test-postgres-secrets-in-helm.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-test-postgres-secrets-in-helm.yaml
@@ -2,8 +2,9 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-matrixAuthenticationService:
+synapse:
   postgres:
-    host: postgres
-    user: mas
-    database: mas
+    password:
+      value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+      secret: null
+      secretKey: null
