--- a/charts/matrix-stack/ci/synapse-postgresql-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgresql-secrets-externally-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-test-postgres-secrets-externally.yaml synapse-secrets-externally.yaml
+# source_fragments: synapse-minimal.yaml synapse-secrets-externally.yaml postgresql-secrets-externally.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -12,17 +12,16 @@ elementWeb:
 matrixAuthenticationService:
   enabled: false
 postgresql:
-  enabled: false
+  enabled: true
+  adminPassword:
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: adminPasswordShared
+  essPassword:
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: essPasswordShared
 synapse:
   ingress:
     host: synapse.ess.localhost
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      secret: "{{ $.Release.Name }}-synapse-external"
-      secretKey: postgresPassword
   registrationSharedSecret:
     secret: "{{ $.Release.Name }}-synapse-external"
     secretKey: registrationSharedSecret
