--- a/charts/matrix-stack/ci/synapse-postgresql-secrets-in-helm-values.yaml
+++ b/charts/matrix-stack/ci/synapse-postgresql-secrets-in-helm-values.yaml
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 #
-# source_fragments: synapse-minimal.yaml synapse-test-postgres.yaml synapse-test-postgres-secrets-in-helm.yaml synapse-secrets-in-helm.yaml
+# source_fragments: synapse-minimal.yaml synapse-secrets-in-helm.yaml postgresql-secrets-in-helm.yaml
 # DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
 initSecrets:
@@ -12,16 +12,14 @@ elementWeb:
 matrixAuthenticationService:
   enabled: false
 postgresql:
-  enabled: false
+  enabled: true
+  adminPassword:
+    value: CHANGEME-phiaPh8iu9tiivaiWahquaeg8ohcub4a
+  essPassword:
+    value: CHANGEME-aiT7eisheim3Ojo3rongikuo1eiV3Ooh
 synapse:
   ingress:
     host: synapse.ess.localhost
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
   registrationSharedSecret:
     value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
   macaroon:
