--- a/charts/matrix-stack/ci/fragments/synapse-test-postgres-secrets-externally.yaml
+++ b/charts/matrix-stack/ci/fragments/synapse-test-postgres-secrets-externally.yaml
@@ -2,8 +2,8 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-matrixAuthenticationService:
+synapse:
   postgres:
-    host: postgres
-    user: mas
-    database: mas
+    password:
+      secret: "{{ $.Release.Name }}-synapse-external"
+      secretKey: postgresPassword
