--- a/charts/matrix-stack/ci/matrix-authentication-service-postgresql-secrets-externally-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-postgresql-secrets-externally-values.yaml
@@ -1,21 +1,26 @@
-# Copyright 2025 New Vector Ltd
+# Copyright 2024-2025 New Vector Ltd
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
+#
+# source_fragments: matrix-authentication-service-minimal.yaml matrix-authentication-service-secrets-externally.yaml postgresql-secrets-externally.yaml
+# DO NOT EDIT DIRECTLY. Edit the fragment files to add / modify / remove values
 
+initSecrets:
+  enabled: false
+elementWeb:
+  enabled: false
 matrixAuthenticationService:
-
+  ingress:
+    host: mas.ess.localhost
   synapseSharedSecret:
     secret: "{{ $.Release.Name }}-mas-external"
     secretKey: synapseShared
-
   synapseOIDCClientSecret:
     secret: "{{ $.Release.Name }}-mas-external"
     secretKey: synapseOIDC
-
   encryptionSecret:
     secret: "{{ $.Release.Name }}-mas-external"
     secretKey: encryption
-
   privateKeys:
     rsa:
       secret: "{{ $.Release.Name }}-mas-external"
@@ -29,3 +34,15 @@ matrixAuthenticationService:
     ecdsaSecp384r1:
       secret: "{{ $.Release.Name }}-mas-external"
       secretKey: keysEcdsaSecp384r1
+postgresql:
+  enabled: true
+  adminPassword:
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: adminPasswordShared
+  essPassword:
+    secret: "{{ $.Release.Name }}-pg-external"
+    secretKey: essPasswordShared
+synapse:
+  enabled: false
+wellKnownDelegation:
+  enabled: false
